# DesktopPet

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
core/: apppaths.cpp  apppaths.h  appsettings.cpp  appsettings.h  appversion.h  appversion_generated.h.in  gifframeextractor.cpp  gifframeextractor.h  petaction.cpp  petaction.h  petanimationplayer.cpp  petanimationplayer.h  petconfigmanager.cpp  petconfigmanager.h  petpaths.cpp  petpaths.h  petplaylist.cpp  petplaylist.h  petwidget.cpp  petwidget.h  settingswindow.cpp  settingswindow.h  traymanager.cpp  traymanager.h  updatemanager.cpp  updatemanager.h  versionutils.cpp  versionutils.h
dialogs/: addactiondialog.cpp  addactiondialog.h  addexistingactiondialog.cpp  addexistingactiondialog.h  apiconfigdialog.cpp  apiconfigdialog.h  createactiondialog.cpp  createactiondialog.h  importactiondialog.cpp  importactiondialog.h  importgifdialog.h  importpetdialog.cpp  importpetdialog.h  newactiondialog.cpp  newactiondialog.h  newpetdialog.cpp  newpetdialog.h
models/: actioncategory.h  apiconfig.cpp  apiconfig.h  apiproviderpreset.cpp  apiproviderpreset.h  petaction.cpp  petaction.h  petplaylist.cpp  petplaylist.h  timedtrigger.cpp  timedtrigger.h  websearchconfig.cpp  websearchconfig.h
pages/: aboutpage.cpp  aboutpage.h  actionsettingspage.cpp  actionsettingspage.h  actionsettingspage_config.cpp  actionsettingspage_import.cpp  actionsettingspage_lists.cpp  actionsettingspage_operations.cpp  actionsettingspage_save.cpp  addactiondialog.cpp  addactiondialog.h  apiconfigpage.cpp  apiconfigpage.h  defaultpetpage.cpp  defaultpetpage.h  displaysettingspage.cpp  displaysettingspage.h  importgifdialog.cpp  importgifdialog.h  logpage.cpp  logpage.h  personalizationpage.cpp  personalizationpage.h  petmanagepage.cpp  petmanagepage.h  websearchconfigpage.cpp  websearchconfigpage.h
platform/windows/: windowbackdrophelper.cpp  windowbackdrophelper.h
resources/: appicon.rc.in  resources.qrc
resources/themes/: themes.json
runtime/: petanimationplayer.cpp  petanimationplayer.h  petwidget.cpp  petwidget.h  petwidget_actions.cpp  petwidget_chat.cpp  petwidget_movement.cpp  traymanager.cpp  traymanager.h
scripts/: package_release.bat
services/: actionimportservice.cpp  actionimportservice.h  actionimportworker.cpp  actionimportworker.h  actionlibraryindexservice.cpp  actionlibraryindexservice.h  actionlibraryservice.cpp  actionlibraryservice.h  apiprofileservice.cpp  apiprofileservice.h  chatcompletionservice.cpp  chatcompletionservice.h  chatlogservice.cpp  chatlogservice.h  chatqueryclassifier.cpp  chatqueryclassifier.h  chatresponseparser.cpp  chatresponseparser.h  chatsettingsservice.cpp  chatsettingsservice.h  petcreationservice.cpp  petcreationservice.h  petimportservice.cpp  petimportservice.h  petlibraryindexservice.cpp  petlibraryindexservice.h  petlibraryservice.cpp  petlibraryservice.h  secretstorageservice.cpp  secretstorageservice.h  updateservice.cpp  updateservice.h  websearchservice.cpp  websearchservice.h  websearchsettingsservice.cpp  websearchsettingsservice.h
tests/: test_apiconfig.cpp  test_apiconfig.h  test_apiprofileservice.cpp  test_apiprofileservice.h  test_apppaths.cpp  test_apppaths.h  test_chatlogservice.cpp  test_chatlogservice.h  test_chatqueryclassifier.cpp  test_chatqueryclassifier.h  test_chatresponseparser.cpp  test_chatresponseparser.h  test_main.cpp  test_petlibraryindexservice.cpp  test_petlibraryindexservice.h  test_repositorycleanup.cpp  test_repositorycleanup.h  test_secretstorageservice.cpp  test_secretstorageservice.h  test_updateservice.cpp  test_updateservice.h  test_versionutils.cpp  test_versionutils.h  test_websearchconfig.cpp  test_websearchconfig.h
theme/: thememanager.cpp  thememanager.h
tools/action_asset_resizer/: action_asset_resizer.py  build_resize_exe.bat
tools/packaging/: DesktopPet.iss  build_installer.bat  package_release.bat
tools/resize/: main.cpp  resize.rc.in  resizewindow.cpp  resizewindow.h
ui/: settingswindow.cpp  settingswindow.h
utils/: imageutils.cpp  imageutils.h  updatemanager.cpp  updatemanager.h
widgets/: actioncategorylistwidget.cpp  actioncategorylistwidget.h  actioncategorytabwidget.cpp  actioncategorytabwidget.h  actionlibrarylistwidget.cpp  actionlibrarylistwidget.h  emptystatewidget.cpp  emptystatewidget.h  glasscardwidget.cpp  glasscardwidget.h  nowheellistwidget.cpp  nowheellistwidget.h  petchatwidget.cpp  petchatwidget.h  settingstitlebar.cpp  settingstitlebar.h  softcardwidget.cpp  softcardwidget.h  softdialogtitlebar.cpp  softdialogtitlebar.h  softinputdialog.cpp  softinputdialog.h  softmessagebox.cpp  softmessagebox.h  wheelguardlistwidget.cpp  wheelguardlistwidget.h
